added images in my gallery

--- a/photos/templates/picture.html
+++ b/photos/templates/picture.html
@@ -38,7 +38,7 @@
       </div>
       {% empty %}
       <div class="row">
-        <h4 class="text-center">Gallery is Empty</h4>
+        <h4 class="text-center">Empty Gallery</h4>
       </div>
       {% endfor %}
     </div>
