--- a/photos/templates/navbar.html
+++ b/photos/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark bg-danger ">
+<nav class="navbar navbar-dark bg-success ">
     <div class="container-fluid">
       <div class="navbar-header">
         <a class="navbar-brand" href="{% url 'picture' %}">Photo Gallery</a>
