Added search by cartegory

--- a/photos/templates/navbar.html
+++ b/photos/templates/navbar.html
@@ -3,7 +3,18 @@
       <div class="navbar-header">
         <a class="navbar-brand" href="{% url 'picture' %}">Photo Gallery</a>
       
-      </div>    
+      </div>   <br> 
+      <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Category
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <a class="dropdown-item" href="#">cars</a> <br>
+          <a class="dropdown-item" href="#">Cities</a> <br>
+          <a class="dropdown-item" href="#">Sports</a> <br>
+          <a class="dropdown-item" href="#">Beaches</a>
+        </div>
+      </div>
       <!-- Adding a search form  -->
       <div class="col-sm-4 col-md-4 navbar-right">
   
