--- a/photos/templates/category.html
+++ b/photos/templates/category.html
@@ -35,7 +35,7 @@
                                     </div> 
                                     <div class="modal-footer"> 
                                         <input class="form-control input-lg" type="text" value="{{image.image_url.url}}" id="{{image.id}}.url"> 
-                                        <button class="btn btn-success btn-sm" onclick="copy('{{image.id}}.url')">Copy </button> 
+                                        <button type="button" class="btn btn-primary btn-sm" onclick="copy('{{image.id}}.url')">Copy </button> 
                                         <button type="button" class="btn btn-danger btn-sm" data-dismiss="modal">Close </button> 
                                     </div> 
                                 </div> 
