--- a/photos/templates/navbar.html
+++ b/photos/templates/navbar.html
@@ -3,25 +3,14 @@
       <div class="navbar-header">
         <a class="navbar-brand" href="{% url 'picture' %}">Photo Gallery</a>
       
-      </div>   <br> 
-      <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Category
-        </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item" href="#">cars</a> <br>
-          <a class="dropdown-item" href="#">Cities</a> <br>
-          <a class="dropdown-item" href="#">Sports</a> <br>
-          <a class="dropdown-item" href="#">Beaches</a>
-        </div>
-      </div>
+      </div>   
       <!-- Adding a search form  -->
       <div class="col-sm-4 col-md-4 navbar-right">
   
         <form class="navbar-form" role="search" action="{% url 'search_results' %}">
   
           <div class="input-group">
-            <input type="text" class="form-control" placeholder="Search Image" name="categories">
+            <input type="text" class="form-control" placeholder="Search Image" name="image">
             <div class="input-group-btn">
               <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
             </div>
